--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "three-demo",
   "version": "0.0.0",
+  "homepage": "https://cygnut.github.io/spaceman",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "vite": "^2.8.1"
   },
   "dependencies": {
