--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three-demo",
+  "name": "spaceman",
   "version": "0.0.0",
   "homepage": "https://cygnut.github.io/spaceman",
   "scripts": {
