--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@types/three": "^0.137.0",
     "gh-pages": "^3.2.3",
     "vite": "^2.8.1"
   },
   "dependencies": {
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "typescript": "^4.5.5"
   }
 }
